fixed bio box width issue.  not perfect alignment

--- a/MainTemplate.css
+++ b/MainTemplate.css
@@ -533,6 +533,12 @@ span.lfdesc{
 	padding: 10px 10px;
 	border-radius: 25px;
 }
+textarea{
+	width: 75%;
+	display: inherit;
+	margin: 0px;
+	padding: 0px;
+}
 .button1{
 	font-size: 14px;
 	display: inline;
